load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "pull",
    srcs = [
        "basic_auth.cc",
        "endpoint.cc",
        "exposer.cc",
        "handler.cc",
        "metrics_collector.cc",
    ],
    hdrs = [
        "basic_auth.h",
        "endpoint.h",
        "exposer.h",
        "handler.h",
        "metrics_collector.h",
    ],
    local_defines = [
        "HAVE_ZLIB",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//prometheus",
        "//pull/detail",
        "@civetweb",
        "@zlib",
    ],
)
