load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "push",
    srcs = [
        "curl_wrapper.cc",
        "gateway.cc",
    ],
    hdrs = [
        "curl_wrapper.h",
        "gateway.h",
    ],
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
    deps = [
        "//prometheus",
        "//push/detail",
        "@curl",
    ],
)
