load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "push",
    srcs = [
        "curl_wrapper.cc",
        "gateway.cc",
    ],
    hdrs = [
        "curl_wrapper.h",
        "detail/http_method.h",
        "gateway.h",
    ],
    strip_include_prefix = "push/",
    include_prefix = "prometheus/",
    linkopts = ["-lpthread"],
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "@curl",
    ],
)
